# Tool_Translate_Language_Video

./: LICENSE  Notebook_process.ipynb  README.md  config.yaml  main.py  pyproject.toml
pipelines/: tool_freemium.py
tool_language_video_translate/: asr.py  timespeech.py  translate.py  tts.py  types.py  utils.py
